# pear

./: .gitignore  .lunterc  .npmrc  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  NOTICE  README.md  architecture.md  argv.js  bare-build.config.cjs  bare-build.msix.config.cjs  boot-tmp.js  boot.js  checkout.js  cli.js  constants.js  context.js  debug-helper.js  decal.html  electron-main.js  electron.js  errors.js  flags.js  gunk.js  main.js  not-found.html  package-lock.json  package.json  pear.cmd  pear.dev  pear.js  pear.ps1  pre.js  preload.cjs  preload.js  rti-bootstrap.js  run-entries.txt  (+10 more)
.github/: CODEOWNERS
cmd/: build.js  changelog.js  cores.js  data.js  delete.js  drop.js  dump.js  encryption-key.js  gc.js  iface.js  index.js  info.js  init.js  install.js  keygen.js  link.js  list.js  logs.js  multisig.js  package.json  preset.js  presets.js  provision.js  release.js  reset.js  run.js  seed.js  shift.js  sidecar.js  sign.js  stage.js  touch.js  usage.js  use.js  versions.js
ctx/: shared.js  sidecar.js
def/: pear.js  run.js  sidecar.js
docs/: hyperdb-schema-diagram.md
gui/: api.js  gui.js  icons.js  index.js  (+2 more)
init/templates/distributables/: CMakeLists.txt  _template.json  package.json
init/templates/distributables/__node_modules/cmake-fetch/: cmake-fetch.cmake  package.json  patch.cmake
init/templates/distributables/__node_modules/cmake-macos/: Entitlements.plist
init/templates/distributables/__node_modules/cmake-msix/: package.json
init/templates/distributables/__node_modules/cmake-npm/: cmake-npm.cmake
init/templates/distributables/__node_modules/cmake-pear/: package.json
init/templates/distributables/distributables/: README.md
(+590 files in other folders)
